--- a/src/Web.Ng/ng-app/src/app/people/people-list/people-list.component.html
+++ b/src/Web.Ng/ng-app/src/app/people/people-list/people-list.component.html
@@ -1,6 +1,6 @@
 <h2>My People</h2>
 <ul class="people">
-  <li *ngFor="let person of people" (click)="onSelect(person)">
+  <li *ngFor="let person of people | async" [class.selected]="isSelected(person)" (click)="onSelect(person)">
     <span class="badge">{{person.id}}</span> {{person.name}}
   </li>
 </ul>
