--- a/src/Web.Ng/ng-app/src/app/crises/crises-detail/crises-detail.component.html
+++ b/src/Web.Ng/ng-app/src/app/crises/crises-detail/crises-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="person">
+<div *ngIf="crisis">
   <h2>{{crisis.name}} details!</h2>
   <div>
     <label>Id: </label>{{crisis.id}}
@@ -6,11 +6,6 @@
   <div>
     <label>Name: </label>
     <input [(ngModel)]="crisis.name" placeholder="Name" />
-  </div>
-
-   <div>
-    <label>Age: </label>
-    <input [(ngModel)]="crisis.age" placeholder="Age" />
   </div>
 </div>
 
