--- a/src/Web.Ng/ng-app/src/app/crises/crises-list/crises-list.component.html
+++ b/src/Web.Ng/ng-app/src/app/crises/crises-list/crises-list.component.html
@@ -1,7 +1,7 @@
-<ul class="items">
-      <li *ngFor="let crises of crisis | async"
-        (click)="onSelect(crises)"
-        [class.selected]="isSelected(crises)">
+<ul class="crises">
+      <li *ngFor="let crisis of crises | async"
+        (click)="onSelect(crisis)"
+        [class.selected]="isSelected(crisis)">
           <span class="badge">{{ crisis.id }}</span>
           {{ crisis.name }}
       </li>
