child and parent guard. waiting on auth service.

--- a/src/Web.Ng/ng-app/src/app/app.component.html
+++ b/src/Web.Ng/ng-app/src/app/app.component.html
@@ -4,6 +4,7 @@
   <a routerLink="/list-people" routerLinkActive="active">People</a>
   <a routerLink="/one" routerLinkActive="active">First</a>
   <a routerLink="/two" routerLinkActive="active">Second</a>
+  <a routerLink="admin" routerLinkActive="active">Admin</a>
   <a [routerLink]="[{ outlets: { popup: ['compose'] } }]">Contact</a>
 </nav>
 <router-outlet></router-outlet>
