--- a/src/Web.Ng/ng-app/src/app/crises/crises-detail/crises-detail.component.html
+++ b/src/Web.Ng/ng-app/src/app/crises/crises-detail/crises-detail.component.html
@@ -5,8 +5,8 @@
   </div>
   <div>
     <label>Name: </label>
-    <input [(ngModel)]="crisis.name" placeholder="Name" />
+    <input [(ngModel)]="editName" placeholder="Name" />
   </div>
 </div>
-
+<button (click)="save()">Save</button>
 <button (click)="goBack()">Back</button>
