--- a/src/Web.Ng/ng-app/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/Web.Ng/ng-app/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,5 @@
-<p>Admin Dashboard</p>
+<h4>Admin Dashboard</h4>
+
+<p>Session Id: {{sessionId | async}}</p>
+<a id="anchor"></a>
+<p>Token: {{token | async}}</p>
